meta-webhook/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meta-webhook
  labels:
    app: meta-webhook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: meta-webhook
  template:
    metadata:
      labels:
        app: meta-webhook
      annotations:
        linkerd.io/inject: enabled
        vault.security.banzaicloud.io/vault-role: meta
        vault.security.banzaicloud.io/vault-addr: "https://vault.default:8200"
        vault.security.banzaicloud.io/vault-tls-secret: vault-tls
    spec:
      containers:
      - name: meta-webhook
        image: rg.nl-ams.scw.cloud/uplink/meta-webhook:main
      imagePullSecrets:
      - name: uplink-nl-ams-scw-registry
