meta-webhook/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: meta-webhook-http
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`meta-webhook.infra.rwx.im`)
    kind: Rule
    middlewares:
    - name: redirect-to-https
    services:
    - name: meta-webhook
      kind: Service
      port: 4567
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: meta-webhook-https
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`meta-webhook.infra.rwx.im`)
    kind: Rule
    services:
    - name: meta-webhook
      kind: Service
      port: 4567
  # Use the secret generated by cert-manager
  tls:
    secretName: meta-webhook.infra.rwx.im-tls
